# watch_app

./: .gitignore
chatbot/: app.js  app.json
chatbot/app-side/: index.js
chatbot/page/: index.js  index.s.layout.js  utils.js
chatbot/setting/: index.js
chatbot/utils/config/: device.js
server/: pyproject.toml  requirements.txt
server/src/: main.py
server/src/agents/: base.py  state.py  workflow.py
server/src/agents/chat/: chat.py  prompt.py  tool.py
server/src/api/: chat.py  home.py  utils.py
server/src/config/: setup.py
server/src/data/audio/: tts.opus
test/: app.json
